--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,14 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+//    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+//    implementation 'com.github.trystan:AsciiPanel:master-SNAPSHOT'
+    implementation files('AsciiPanel.jar')
 }
 
 test {
